deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: guestbook-ui
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: guestbook-ui
  template:
    metadata:
      labels:
        app: guestbook-ui
    spec:
      containers:
      - image: nginxinc/nginx-unprivileged:1.27
        name: guestbook-ui
        ports:
        - containerPort: 8080
        resources:
          limits:
            cpu: 10m
            memory: 50M
        volumeMounts:
        - mountPath: "/usr/share/nginx/html"
          name: guestbook-secret
      volumes:
      - name: guestbook-secret
        secret:
          secretName: guestbook-secret
