ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: guestbook-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: demo-vault.formation-app.cpin.numerique-interieur.com
    http:
      paths:
      - backend:
          service:
            name: guestbook-ui
            port:
              number: 32088
        path: /
        pathType: Prefix
